--- a/contact-us.html
+++ b/contact-us.html
@@ -12,21 +12,7 @@
         <span>By: Mary, Keith, Korre, and Kevin</span>
     </header>
 
-    <article>
-        <h2>COR welcomes their fourth Coding cohort</h2>
-        <span>By Kevin Prachith</span>
-        <p>
-            blah blah blah blah and they're all excited to be here.
-        </p>
-    </article>
-
-    <article>
-        <h2>COR boasts 100% hire ability for coding students</h2>
-        <span>By Mary Fuller</span>
-        <p>
-            blah blah blah blah and they're all super happy to be receiving 6 figure salaries.
-        </p>
-    </article>
+    <h2>Contact Us</h2>
 
     <hr>
 
