Changes authors at top of page to editors

--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COR-Corner News</title>
 </head>
+
+
+
+
+
+
+
 <body>
     <header>
         <h1>City of Refuge - Corner News</h1>
-        <span>By: Mary, Keith, Korre, and Kevin</span>
+        <span>Edited by Mary, Keith, Korre, and Kevin</span>
     </header>
 
     <article>
