Adds semantic tags to index

--- a/index.html
+++ b/index.html
@@ -7,33 +7,29 @@
     <title>COR-Corner News</title>
 </head>
 
-
-
-
-
-
-
 <body>
     <header>
-        <h1>City of Refuge - Corner News</h1>
+        <h1>The City of Refuge Corner News</h1>
         <span>Edited by Mary, Keith, Korre, and Kevin</span>
     </header>
 
-    <article>
-        <h2>COR welcomes their fourth Coding cohort</h2>
-        <span>By Kevin Prachith</span>
-        <p>
-            blah blah blah blah and they're all excited to be here.
-        </p>
-    </article>
-
-    <article>
-        <h2>COR boasts 100% hire ability for coding students</h2>
-        <span>By Mary Fuller</span>
-        <p>
-            blah blah blah blah and they're all super happy to be receiving 6 figure salaries.
-        </p>
-    </article>
+    <main>
+        <article>
+            <h2>COR welcomes their fourth Coding cohort</h2>
+            <span>By Kevin Prachith</span>
+            <p>
+                blah blah blah blah and they're all excited to be here.
+            </p>
+        </article>
+    
+        <article>
+            <h2>COR boasts 100% hire ability for coding students</h2>
+            <span>By Mary Fuller</span>
+            <p>
+                blah blah blah blah and they're all super happy to be receiving 6 figure salaries.
+            </p>
+        </article>
+    </main>
 
     <hr>
 
